# Computer-Graphics_engine-project

./: .gitignore  CMakeLists.txt  README.md  engine
lib/Intro/: Intro3_lines_eye.ini
lib/l_systems/: filelist
lib/spheres_and_cylinders/: filelist  spheres_and_cylinders001.ini  spheres_and_cylinders002.ini  spheres_and_cylinders003.ini  spheres_and_cylinders004.ini  spheres_and_cylinders005.ini  spheres_and_cylinders006.ini  spheres_and_cylinders007.ini  spheres_and_cylinders008.ini  spheres_and_cylinders009.ini  spheres_and_cylinders010.ini  spheres_and_cylinders011.ini  spheres_and_cylinders012.ini  spheres_and_cylinders013.ini  spheres_and_cylinders014.ini  spheres_and_cylinders015.ini  spheres_and_cylinders016.ini  spheres_and_cylinders017.ini  spheres_and_cylinders018.ini  spheres_and_cylinders019.ini  spheres_and_cylinders020.ini  spheres_and_cylinders021.ini  spheres_and_cylinders022.ini  spheres_and_cylinders023.ini  spheres_and_cylinders024.ini  spheres_and_cylinders025.ini  spheres_and_cylinders026.ini  spheres_and_cylinders027.ini  spheres_and_cylinders028.ini  spheres_and_cylinders029.ini  spheres_and_cylinders030.ini  spheres_and_cylinders031.ini  spheres_and_cylinders032.ini  spheres_and_cylinders033.ini  spheres_and_cylinders034.ini  spheres_and_cylinders035.ini  spheres_and_cylinders036.ini  spheres_and_cylinders037.ini  spheres_and_cylinders038.ini  spheres_and_cylinders039.ini  (+174 more)
src/: engine.cc  generate.cc  generate.h  l_systems.cc  l_systems.h  points_n_lines.h
src/2D/: points_n_lines.cc  points_n_lines.h
src/3D/: figure.cpp  figure.h  world3D.h  (+7 more)
(+5 files in other folders)
